Added ingredients needed to lumpia and monggo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <body>
     <h1>Recipe Book</h1>
     <ul>
-        <li>
-            <a href="./recipes/monggo.html">Monggo</a>
-        </li>
+        <li><a href="./recipes/monggo.html">Monggo</a></li>
+        <li><a href="./recipes/lumpia.html">Lumpia Shanghai</a></li>
     </ul>
 </body>
 </html>
