--- a/recipes/monggo.html
+++ b/recipes/monggo.html
@@ -6,6 +6,19 @@
     </head>
     <body>
         <h1>Monggo Recipe</h1>
-        
+        <h2>Ingredients Needed</h2>
+        <ul>
+            <li>1.5 cups Monggo balls</li>
+            <li>10 pieces large shrimp</li>
+            <li>1 small onion</li>
+            <li>8 pieces garlic cloves</li>
+            <li>1 tomato</li>
+            <li>2 cups spinach</li>
+            <li>salt</li>
+            <li>black pepper</li>
+            <li>chicken buillon powder</li>
+            <li>chicken buillon cube</li>
+            <li>chicharon</li>
+        </ul>
     </body>
 </html>
