Monggo and Lumpia Finished

--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -3,22 +3,49 @@
     <head>
         <meta charset="UTF-8">
         <title>Lumpia Shanghai</title>
+        <link rel="stylesheet" href="lumpia.css">
     </head>
     <body>
         <h1>Lumpia Shanghai Recipe</h1>
-        <h2>Ingredients Needed</h2>
-        <ul>
-            <li>1 lb of ground pork</li>
-            <li>half an onion</li>
-            <li>4 cloves of garli</li>
-            <li>less than half a carrot</li>
-            <li>half tsp salt</li>
-            <li>1 tsp black pepper</li>
-            <li>2 tsp knorr seasoning</li>
-            <li>green onion</li>
-            <li>celery</li>
-            <li>1 egg</li>
-            <li>oil</li>
-        </ul>
+        <img src="food_images/Lumpia Shanghai.jpg" alt="Lumpia Shanghai" style="width: 300px; height: 300px;">
+        <p>Lumpia Shanghai is a Filipino dish that consists of small, deep-fried spring rolls filled with a savory mixture of ground pork, vegetables,
+            and sometimes shrimp or other meats. It's a popular appetizer and is known for its crispy exterior and flavorful filling.</p>
+            <div>
+                <div>
+                <ul>
+                    <h2>Ingredients Needed</h2>
+                    <li>1 lb of ground pork</li>
+                    <li>half an onion</li>
+                    <li>4 cloves of garli</li>
+                    <li>less than half a carrot</li>
+                    <li>half tsp salt</li>
+                    <li>1 tsp black pepper</li>
+                    <li>2 tsp knorr seasoning</li>
+                    <li>green onion</li>
+                    <li>celery</li>
+                    <li>1 egg</li>
+                    <li>oil</li>
+                </ul>
+                </div>
+                <div class="column">
+                    <ol type="1">
+                        <h2>Preperation Steps</h2>
+                        <li>Use grinder to easily cut vegetables</li>
+                        <li>Mash eggs in a large bowl</li>
+                        <li>Add onion, garlic, carrot, green onion, celery in the egg bowl and mix well</li>
+                        <li>add salt, black pepper, knorr season, liquid season into same bowl and mix</li>
+                        <li>Add pork and mix well</li>
+                    </ol>
+                </div>
+                <div class="column">
+                    <ol>
+                        <h2>Cooking Steps</h2>
+                        <li>Heat up oil in a large pan</li>
+                        <li>Add mixture into lumpia wrappers</li>
+                        <li>Fry until golden brown</li>
+                        <li>Finished</li>
+                    </ol>
+                </div>
+            </div>
     </body>
 </html>
