--- a/recipes/monggo.html
+++ b/recipes/monggo.html
@@ -3,11 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Monggo</title>
+        <link rel="stylesheet" href="monggo.css">
     </head>
     <body>
         <h1>Monggo Recipe</h1>
-        <h2>Ingredients Needed</h2>
+        <img src="food_images/Monggo.jpg" alt="Monggo" style="width: 300px; height: 300px;">
+        <p>Monggo, also known as "ginisang monggo" or "monggo guisado," is a traditional Filipino dish made from mung beans (also called "monggo" or "munggo" in the Philippines). 
+            It's a hearty, savory stew that is both nutritious and comforting, often served as a main dish with rice.</p>
+    <div>
+        <div>
         <ul>
+            <h2>Ingredients Needed</h2>
             <li>1.5 cups Monggo balls</li>
             <li>10 pieces large shrimp</li>
             <li>1 small onion</li>
@@ -20,5 +26,35 @@
             <li>chicken buillon cube</li>
             <li>chicharon</li>
         </ul>
+        </div>
+        <div class="column">
+            <ol type="1">
+                <h2>Preperation Steps</h2>
+                <li>Simmer mung bean balls in water over medium heat for approximately 45 minutes, or until the water has evaporated and the mung bean balls are tender</li>
+                <li>Mince garlic</li>
+                <li>Cut onions to a small size</li>
+                <li>Cut tomatoes to a small size</li>
+                <li>Clean spinach</li>
+                <li>Peel, de-gut shrimp, and cut to desired length</li>
+            </ol>
+        </div>
+        <div class="column">
+            <ol>
+                <h2>Cooking Steps</h2>
+                <li>Heat up oil in a large pan</li>
+                <li>Add onion to level 4 heat</li>
+                <li>Add garlic when onion is golden brown or clearish</li>
+                <li>Add tomatoes when garlic light brown (flatten tomatoes inside pot)</li>
+                <li>Once tomatoes flattened add 10 pinches of salt, 2 tbsp chicken buillon powder, and 4 tsp black pepper</li>
+                <li>After 5 mins add munggo balls</li>
+                <li>After 5 mins add 5 cups water (Add depending on how much soup you want)</li>
+                <li>Increase the fire to high once the water is added</li>
+                <li>When boiling a bit add shrimp, 1 buillon cube, mashed chicahron</li>
+                <li>In a few mins taste it, if no taste add buillon powder</li>
+                <li>Also add in spinach, let boil a bit</li>
+                <li>Finished</li>
+            </ol>
+        </div>
+    </div>
     </body>
 </html>
